--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@auth/firebase-adapter": "^1.0.0",
+    "@headlessui/react": "^1.7.17",
+    "@heroicons/react": "^2.0.18",
     "firebase": "^10.4.0",
     "firebase-admin": "^11.11.0",
     "next": "latest",
