--- a/functions/package.json
+++ b/functions/package.json
@@ -17,7 +17,8 @@
     "firebase-functions": "^4.3.1"
   },
   "devDependencies": {
-    "firebase-functions-test": "^3.1.0"
+    "firebase-functions-test": "^3.1.0",
+    "puppeteer": "^10.4.0"
   },
   "private": true
 }
