--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@auth/firebase-adapter": "^1.0.0",
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.0.18",
+    "axios": "^1.5.1",
     "firebase": "^10.4.0",
     "firebase-admin": "^11.11.0",
     "next": "latest",
@@ -21,7 +22,7 @@
     "react-firebase-hooks": "^5.1.1"
   },
   "devDependencies": {
-    "@types/node": "latest",
+    "@types/jsdom": "^21.1.3",
     "@types/react": "latest",
     "@types/react-dom": "latest",
     "autoprefixer": "latest",
