--- a/functions/package.json
+++ b/functions/package.json
@@ -13,8 +13,10 @@
   },
   "main": "index.js",
   "dependencies": {
+    "axios": "^1.5.1",
     "firebase-admin": "^11.8.0",
-    "firebase-functions": "^4.3.1"
+    "firebase-functions": "^4.3.1",
+    "openai": "^4.11.1"
   },
   "devDependencies": {
     "firebase-functions-test": "^3.1.0",
