--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
     "@auth/firebase-adapter": "^1.0.0",
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.0.18",
+    "@types/node": "^20.8.4",
     "axios": "^1.5.1",
     "firebase": "^10.4.0",
     "firebase-admin": "^11.11.0",
     "next": "latest",
     "next-auth": "^4.23.1",
+    "openai": "^4.12.1",
+    "puppeteer": "^21.3.8",
     "react": "latest",
     "react-dom": "latest",
     "react-firebase-hooks": "^5.1.1"
@@ -30,6 +33,6 @@
     "eslint-config-next": "latest",
     "postcss": "latest",
     "tailwindcss": "latest",
-    "typescript": "latest"
+    "typescript": "^5.2.2"
   }
 }
