--- a/functions/package.json
+++ b/functions/package.json
@@ -13,9 +13,13 @@
   },
   "main": "index.js",
   "dependencies": {
+    "@deepgram/sdk": "^2.4.0",
+    "@ffmpeg-installer/ffmpeg": "^1.1.0",
     "axios": "^1.5.1",
     "firebase-admin": "^11.8.0",
     "firebase-functions": "^4.3.1",
+    "fluent-ffmpeg": "^2.1.2",
+    "form-data": "^4.0.0",
     "openai": "^4.11.1"
   },
   "devDependencies": {
