--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@auth/firebase-adapter": "^1.0.0",
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.0.18",
+    "@stripe/firestore-stripe-payments": "^0.0.6",
+    "@stripe/stripe-js": "^2.1.9",
     "@types/node": "^20.8.4",
     "axios": "^1.5.1",
     "firebase": "^10.4.0",
