--- a/.env
+++ b/.env
@@ -1,11 +1,16 @@
 GOOGLE_APPLICATION_CREDENTIALS=./service-account.json
 
-NEXT_PUBLIC_FIREBASE_API_KEY="AIzaSyARw2ZZ4s06XGevQpMmrV06J6A8rOHtc8Q"
-NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN="webnest-f4392.firebaseapp.com"
-NEXT_PUBLIC_FIREBASE_PROJECT_ID="webnest-f4392"
-NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET="webnest-f4392.appspot.com"
-NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID="232253787380"
-NEXT_PUBLIC_FIREBASE_APP_ID="1:232253787380:web:71cd6941b60cc0983262a1"
-NEXT_PUBLIC_FIREBASE_MEASUREMENT_ID="G-012X9GRCG0"
+NEXT_PUBLIC_FIREBASE_API_KEY="AIzaSyCQefOBFjLnvv4X9vKjwMzjFc0ADGhWjy0"
+NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN="zesti-production.firebaseapp.com"
+NEXT_PUBLIC_FIREBASE_PROJECT_ID="zesti-production"
+NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET="zesti-production.appspot.com"
+NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID="163879644081"
+NEXT_PUBLIC_FIREBASE_APP_ID="1:163879644081:web:9923d857fc3f483a2cab90"
+NEXT_PUBLIC_FIREBASE_MEASUREMENT_ID="G-SSZ6Q92MWY"
+
+NEXT_PUBLIC_STRIPE_BASE_PRICE="price_1O4pgyGtkWdn4NzbydWONe8g"
+NEXT_PUBLIC_STRIPE_ESSENTIAL_PRICE="price_1O4pj1GtkWdn4NzbPFS1Yg8M"
+NEXT_PUBLIC_STRIPE_PREMIUM_PRICE="price_1O4pkPGtkWdn4NzbWzKVtd8z"
+NEXT_PUBLIC_STRIPE_NO_CODE_PORATL="https://billing.stripe.com/p/login/dR65km9WyfZgeha4gg"
 
 NEXT_PUBLIC_VIDEO_LENGTH_API_KEY="AIzaSyARw2ZZ4s06XGevQpMmrV06J6A8rOHtc8Q"
