--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@stripe/firestore-stripe-payments": "^0.0.6",
     "@stripe/stripe-js": "^2.1.9",
     "@types/node": "^20.8.4",
+    "@vercel/analytics": "^1.1.1",
     "axios": "^1.5.1",
     "firebase": "^10.4.0",
     "firebase-admin": "^11.11.0",
