Google Conversion Tracking

--- a/.env
+++ b/.env
@@ -14,3 +14,5 @@ NEXT_PUBLIC_STRIPE_PREMIUM_PRICE="price_1O4pkPGtkWdn4NzbWzKVtd8z"
 NEXT_PUBLIC_STRIPE_NO_CODE_PORATL="https://billing.stripe.com/p/login/dR65km9WyfZgeha4gg"
 
 NEXT_PUBLIC_VIDEO_LENGTH_API_KEY="AIzaSyARw2ZZ4s06XGevQpMmrV06J6A8rOHtc8Q"
+
+NEXT_PUBIC_GOOGLE_CONVERSION_ID="AW-11391923080"
