--- a/.env
+++ b/.env
@@ -16,3 +16,4 @@ NEXT_PUBLIC_STRIPE_NO_CODE_PORATL="https://billing.stripe.com/p/login/dR65km9Wyf
 NEXT_PUBLIC_VIDEO_LENGTH_API_KEY="AIzaSyARw2ZZ4s06XGevQpMmrV06J6A8rOHtc8Q"
 
 NEXT_PUBIC_GOOGLE_CONVERSION_ID="AW-11391923080"
+NEXT_PUBLIC_GOOGLE_SUBSCRIPTION_TRACKER="-WyuCOnWnfEYEIjni7gq"
