--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "puppeteer": "^21.3.8",
     "react": "latest",
     "react-dom": "latest",
-    "react-firebase-hooks": "^5.1.1"
+    "react-firebase-hooks": "^5.1.1",
+    "react-toastify": "^9.1.3"
   },
   "devDependencies": {
     "@types/jsdom": "^21.1.3",
