--- a/.env
+++ b/.env
@@ -8,6 +8,7 @@ NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID="163879644081"
 NEXT_PUBLIC_FIREBASE_APP_ID="1:163879644081:web:9923d857fc3f483a2cab90"
 NEXT_PUBLIC_FIREBASE_MEASUREMENT_ID="G-SSZ6Q92MWY"
 
+NEXT_PUBLIC_STRIPE_FREE_PRICE="price_1O89ioGtkWdn4NzbYpAOJM6Y"
 NEXT_PUBLIC_STRIPE_BASE_PRICE="price_1O6GMJGtkWdn4NzbDfBZD5uL"
 NEXT_PUBLIC_STRIPE_ESSENTIAL_PRICE="price_1O6GLHGtkWdn4NzbiYtAbRkj"
 NEXT_PUBLIC_STRIPE_PREMIUM_PRICE="price_1O6GIaGtkWdn4Nzbfoq23Itn"
