--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@stripe/firestore-stripe-payments": "^0.0.6",
     "@stripe/stripe-js": "^2.1.9",
     "@types/node": "^20.8.4",
+    "@types/puppeteer": "^7.0.4",
     "@vercel/analytics": "^1.1.1",
     "axios": "^1.5.1",
     "firebase": "^10.4.0",
@@ -22,7 +23,7 @@
     "next": "latest",
     "next-auth": "^4.23.1",
     "openai": "^4.12.1",
-    "puppeteer": "^21.3.8",
+    "puppeteer": "^21.5.2",
     "react": "latest",
     "react-dom": "latest",
     "react-firebase-hooks": "^5.1.1",
