--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "firebase-admin": "^11.11.0",
     "next": "latest",
     "next-auth": "^4.23.1",
+    "ngrok": "^5.0.0-beta.2",
     "openai": "^4.12.1",
     "puppeteer": "^21.5.2",
     "react": "latest",
