--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "react": "latest",
     "react-dom": "latest",
     "react-firebase-hooks": "^5.1.1",
-    "react-toastify": "^9.1.3"
+    "react-toastify": "^9.1.3",
+    "stripe": "^14.10.0"
   },
   "devDependencies": {
     "@types/jsdom": "^21.1.3",
