--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/node": "^20.8.4",
     "@types/puppeteer": "^7.0.4",
     "@vercel/analytics": "^1.1.1",
+    "algoliasearch": "^4.22.1",
     "axios": "^1.5.1",
     "firebase": "^10.4.0",
     "firebase-admin": "^11.11.0",
