--- a/.env
+++ b/.env
@@ -27,3 +27,7 @@ NEXT_PUBLIC_TIKTOK_APP_ID="7315920631497230342"
 NEXT_PUBLIC_TIKTOK_CLIENT_KEY="aw7ssntamb5a78t6"
 NEXT_PUBLIC_TIKTOK_CLIENT_SECRET="6jRYEGowD3V07vOO1TzphBfaggLC1Vf6"
 NEXT_PUBLIC_TIKTOK_REDIRECT_URI="https://www.zesti.ai/profile"
+
+NEXT_PUBLIC_ALGOLIA_APPLICATION_ID="Y2DLXL5PNR"
+NEXT_PUBLIC_ALGOLIA_ADMIN_API_KEY="7a8f2bbec2cf92671331e426e4f596d9"
+NEXT_PUBLIC_ALGOLIA_SEARCH_ONLY_KEY="795633d9689d51b50fbae96bd1728bff"
