redirect_uri update

--- a/.env
+++ b/.env
@@ -26,7 +26,7 @@ NEXT_PUBLIC_TIKTOK_CONVERSION_ID="CM1OLB3C77UDNKHAJ0U0"
 NEXT_PUBLIC_TIKTOK_APP_ID="7315920631497230342"
 NEXT_PUBLIC_TIKTOK_CLIENT_KEY="aw7ssntamb5a78t6"
 NEXT_PUBLIC_TIKTOK_CLIENT_SECRET="6jRYEGowD3V07vOO1TzphBfaggLC1Vf6"
-NEXT_PUBLIC_TIKTOK_REDIRECT_URI="https://www.zesti.ai/profile"
+NEXT_PUBLIC_TIKTOK_REDIRECT_URI="https://www.zesti.ai/auth/redirect"
 
 NEXT_PUBLIC_ALGOLIA_APPLICATION_ID="Y2DLXL5PNR"
 NEXT_PUBLIC_ALGOLIA_ADMIN_API_KEY="7a8f2bbec2cf92671331e426e4f596d9"
