--- a/.env
+++ b/.env
@@ -31,7 +31,7 @@ NEXT_PUBLIC_TIKTOK_REDIRECT_URI="https://www.zesti.ai/auth/redirect"
 NEXT_PUBLIC_ALGOLIA_APPLICATION_ID="Y2DLXL5PNR"
 NEXT_PUBLIC_ALGOLIA_ADMIN_API_KEY="7a8f2bbec2cf92671331e426e4f596d9"
 NEXT_PUBLIC_ALGOLIA_SEARCH_ONLY_KEY="795633d9689d51b50fbae96bd1728bff"
-NEXT_PUBLIC_ALGOLIA_CREATOR_RECIPE_INDEX="CREATORS"
 NEXT_PUBLIC_ALGOLIA_RECIPE_INDEX="RECIPES_TIKTOK"
+NEXT_PUBLIC_ALGOLIA_ALL_RECIPES_INDEX="ALL_RECIPES"
 
 NEXT_PUBLIC_DOMAIN_NAME="zesti.ai"
