--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "postbuild": "next-sitemap"
   },
   "dependencies": {
     "@auth/firebase-adapter": "^1.0.0",
@@ -23,6 +24,7 @@
     "firebase-admin": "^11.11.0",
     "next": "latest",
     "next-auth": "^4.23.1",
+    "next-sitemap": "^4.2.3",
     "ngrok": "^5.0.0-beta.2",
     "openai": "^4.12.1",
     "puppeteer": "^21.5.2",
