--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@auth/firebase-adapter": "^1.0.0",
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.0.18",
+    "@next/bundle-analyzer": "^14.2.3",
     "@stripe/firestore-stripe-payments": "^0.0.6",
     "@stripe/stripe-js": "^2.1.9",
     "@types/node": "^20.8.4",
