--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   },
   "dependencies": {
     "@auth/firebase-adapter": "^1.0.0",
+    "@contentful/rich-text-react-renderer": "^15.20.0",
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.0.18",
     "@next/bundle-analyzer": "^14.2.3",
+    "@tailwindcss/typography": "^0.5.13",
     "@types/node": "^20.8.4",
     "@vercel/analytics": "^1.1.1",
     "algoliasearch": "^4.22.1",
