--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@auth/firebase-adapter": "^1.0.0",
     "@contentful/rich-text-react-renderer": "^15.20.0",
+    "@contentful/rich-text-types": "^16.5.2",
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.0.18",
     "@next/bundle-analyzer": "^14.2.3",
