--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "react-dom": "latest",
     "react-firebase-hooks": "^5.1.1",
     "react-toastify": "^9.1.3",
-    "stripe": "^14.10.0"
+    "stripe": "^14.10.0",
+    "typewriter-effect": "^2.21.0"
   },
   "devDependencies": {
     "@types/jsdom": "^21.1.3",
