--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react": "latest",
     "react-dom": "latest",
     "react-firebase-hooks": "^5.1.1",
+    "react-icons": "^5.3.0",
     "react-toastify": "^9.1.3",
     "stripe": "^14.10.0",
     "typewriter-effect": "^2.21.0"
