--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@vercel/analytics": "^1.1.1",
     "algoliasearch": "^4.22.1",
     "contentful": "^10.11.1",
+    "date-fns": "^3.6.0",
     "firebase": "^10.4.0",
     "next": "latest",
     "next-sitemap": "^4.2.3",
