--- a/package.json
+++ b/package.json
@@ -29,8 +29,7 @@
     "react-firebase-hooks": "^5.1.1",
     "react-icons": "^5.3.0",
     "react-toastify": "^9.1.3",
-    "stripe": "^14.10.0",
-    "typewriter-effect": "^2.21.0"
+    "stripe": "^14.10.0"
   },
   "devDependencies": {
     "@types/jsdom": "^21.1.3",
